Fixed for sudden jump scroll from last to first slide and vice  versa at slick.theme--3d-back.css. Updated to Slick 1.3.11

--- a/sass/theme/slick.theme--3d-back.scss
+++ b/sass/theme/slick.theme--3d-back.scss
@@ -13,18 +13,18 @@
 
 /**
  * @file.
- * Adds 3d view with focal point at front, works best with 3 visible slides.
+ * Adds 3d view with focal point at back, best with centerMode + 3 slidesToShow.
  * Detailed stylings are all yours, get yourself dirty.
  */
 // http://24ways.org/2010/intro-to-css-3d-transforms/
 $arrow-width: 50% !default;
-
-.slick--skin--3d-back {
+$rotate: 25deg !default;
+.slick--skin--3d-back.slick-initialized {
   overflow: hidden;
+  padding-bottom: $vert-spacing-unit; // to keep dots visible.
   padding-top: $vert-spacing-unit;
 
   .slick-list {
-    @include perpective(1500px);
     margin: 0 -120px;
 
     @include breakpoint($desk, true) {
@@ -32,41 +32,47 @@ $arrow-width: 50% !default;
     }
   }
 
-  .slick-track {
-    @include transform-style(preserve-3d);
-    @include transition-transform(1s);
-    @include perpective-origin(50% 50%);
-  }
   .slide {
-    @include transform(rotateY(45deg));
-    @include backface-visibility(hidden);
-    @include transition(opacity 1s ease 0s, transform 1s);
-    -webkit-transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
-    -moz-transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
-    transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
     overflow: hidden;
+
+    .slide__content {
+      @include perpective(1500px);
+      @include transform-style(preserve-3d);
+    }
+
+    .slide__media {
+      margin: $vert-spacing-unit 0;
+      @include transform(rotateY($rotate));
+      @include backface-visibility(hidden);
+      @include transition(opacity 1s ease 0s, transform 1s);
+      -webkit-transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+      -moz-transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+      transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
+    }
 
     .slide__caption {
       bottom: 0;
-      padding: $vert-spacing-unit 0;
+      padding: 0;
       position: relative;
       @include element-hoverable();
-      // @include translateY(600px);
       @include scale(0);
     }
   }
   .slide--current {
     ~ .slide {
-      @include transform(rotateY(-45deg));
+      .slide__media {
+        @include transform(rotateY(-$rotate));
+      }
     }
     &.slide {
-      @include transform(rotateY(0deg));
+      .slide__media {
+        @include transform(rotateY(0deg));
+      }
 
       .slide__caption {
         bottom: auto;
         position: relative;
         @include element-hoverable-hovered();
-        // @include translateY(0);
         @include scale(1);
         // @include transition-delay(0.2s);
       }
